# ess_backend

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Dockerfile.builder  Dockerfile.init  Dockerfile.notifier  Dockerfile.web-service  Makefile  README.md  init.sh
cert/: .gitignore  Makefile
common/: Cargo.toml  Makefile
common/migrations/2020-07-24-114903_notify_request/: down.sql
common/migrations/2021-06-05-235136_employee/: up.sql
common/migrations/2021-06-08-214309_create_employee/: up.sql
common/src/: domain.rs  lib.rs  schema.rs
deploy/compose/: .gitignore  docker-compose.yml
deploy/compose/ess/: docker-compose.yml  ess.env
deploy/scripts/: add_employee.sh  all_employees.sh  conf.inc  create_etc_hosts_entries.sh  verify_req.sh
init/: Dockerfile  init.sh
migrations/2020-07-23-195619_employee/: up.sql
migrations/2020-07-24-112537_employee/: down.sql  up.sql
migrations/2020-07-24-113301_id_verify_request/: down.sql  up.sql
migrations/2020-07-24-114903_notify_request/: up.sql
notifier/: Cargo.toml
notifier/src/: main.rs  models.rs
src/: domain.rs  main.rs  models.rs  schema.rs
web-service/: Cargo.toml  Dockerfile
web-service/src/: dao.rs  daos.rs  diesel_dao.rs  diesel_daos.rs  employee_in_memory_dao.rs  in_memory_dao.rs  lib.rs  main.rs  models.rs  service.rs  traits.rs
web-service/tests/: employee_in_memory_dao.rs  in_memory_dao.rs  in_memory_dao_tests.rs
