[package]
name = "manning-simurgh-web-service"
version = "0.1.0"
authors = ["Kamran Amini"]
edition = "2018"

[dependencies]
async-std = { version = "1.6.0", features = ["attributes"] }
diesel = { version = "1.4.5", features = ["postgres", "numeric"] }
tide = "0.12.0"
serde = "1.0"
serde_json = "1.0"
