[package]
name = "notifier"
version = "0.1.0"
authors = ["Kamran Amini <kam.cpp@gmail.com>"]
edition = "2018"

[dependencies]
common = { path = '../common' }
async-std = { version = "1.6.0", features = ["attributes"] }
chrono = "0.4.13"
diesel = { version = "1.4.5", features = ["postgres", "r2d2", "chrono"] }
futures = "0.3.5"
r2d2 = "0.8.9"
r2d2-diesel = "1.0.0"
rand = "0.7.3"
serde = "1.0"
serde_json = "1.0"
tokio = { version = '0.2.22', features = ['full']}
