[package]
name = "web-service"
version = "0.1.0"
authors = ["Kamran Amini <kam.cpp@gmail.com>"]
edition = "2018"

[dependencies]
async-rustls = "0.2.0"
async-std = { version = "1.9.0", features = ["attributes"] }
chrono = "0.4.13"
common = { path = '../common' }
diesel = { version = "1.4.5", features = ["postgres", "r2d2", "chrono"] }
google-authenticator = "0.2.0"
env_logger = "0.9.0"
log = "0.4.14"
r2d2 = "0.8.9"
r2d2-diesel = "1.0.0"
rand = "0.7.3"
serde = "1.0"
serde_json = "1.0"
tide = "0.16.0"
tide-rustls = "0.3.0"
